# nanoikm-pg

./: CLAUDE.md  PROJECT_STATUS.md  README.md
mlpg/: .gitignore  CLAUDE.md  DIFFUSION_MODELS_CURRICULUM.md  ML_LEARNING_PLAN.md  NOTEBOOK_GUIDELINES.md  README.md  SYLLABUS.md  jp_in_plots_scan_results.txt  pyproject.toml
mlpg/notebooks/: best_mlp_pipeline.joblib
mlpg/notebooks/3d-vision/: 50_optics_fundamentals_v1.ipynb  51_pinhole_projection_model_v1.ipynb  52_lens_distortion_correction_v1.ipynb  53_coordinate_transforms_rigid_motion_v1.ipynb  54_camera_calibration_v1.ipynb  55_epipolar_geometry_theory_v1.ipynb  56_stereo_vision_disparity_v1.ipynb  57_triangulation_3d_reconstruction_v1.ipynb  58_feature_detection_matching_v1.ipynb  59_sfm_pipeline_basics_v1.ipynb  60_bundle_adjustment_v1.ipynb  61_ray_casting_coordinates_v1.ipynb  62_volume_rendering_v1.ipynb  63_nerf_introduction_v1.ipynb  CURRICULUM_UNIT_0.3.md
mlpg/notebooks/H_optimization/: 110_gradient_descent_fundamentals_v1.ipynb  111_momentum_nesterov_v1.ipynb  112_adaptive_learning_rate_v1.ipynb  113_learning_rate_scheduling_v1.ipynb  114_regularization_optimization_v1.ipynb  115_advanced_optimization_v1.ipynb  116_optimizer_selection_guide_v1.ipynb
mlpg/notebooks/advanced/: 23_imbalanced_data_handling_improved_v2.ipynb  24_time_series_feature_engineering_improved_v2.ipynb  25_categorical_variable_encoding_improved_v2.ipynb  26_tabular_deep_learning_v4.ipynb  27_kaggle_complete_workflow_improved_v2.ipynb  28_comprehensive_project_improved_v2.ipynb
mlpg/notebooks/embeddings/: 150_embedding_geometry_v1.ipynb  151_word2vec_static_embeddings_v1.ipynb  152_contextual_embeddings_v1.ipynb  153_sentence_document_embeddings_v1.ipynb  154_manifold_learning_visualization_v1.ipynb  (+3 more)
mlpg/scripts/: README.md
(+251 files in other folders)
