[project]
name = "machine-learning-playground"
version = "0.1.0"
description = "Machine Learning educational notebooks and experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Machine Learning Core Libraries
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",

    # Visualization
    "matplotlib>=3.7.0",
    "japanize-matplotlib>=1.1.3",
    "seaborn>=0.12.0",

    # Gradient Boosting Libraries
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",

    # Hyperparameter Optimization
    "optuna>=3.4.0",

    # Model Interpretation (numba/llvmlite for Python 3.11+ compatibility)
    "numba>=0.58.0",
    "llvmlite>=0.41.0",
    "shap>=0.44.0",

    # Imbalanced Data Handling
    "imbalanced-learn>=0.11.0",

    # Feature Engineering
    "category-encoders>=2.6.0",
    "statsmodels>=0.14.0",

    # Deep Learning - PyTorch ecosystem
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "pytorch-tabnet>=4.1.0",

    # Diffusion Models and Transformers
    "diffusers>=0.25.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",

    # Computer Vision and Image Processing
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",

    # Utilities
    "joblib>=1.3.0",
    "tqdm>=4.66.0",
    "einops>=0.7.0",

    # Reinforcement Learning
    "gymnasium>=0.29.0",

    # Video / GIF output
    "imageio>=2.31.0",

    # Jupyter Notebook
    "nbconvert>=7.10.0",
    "nbclient>=0.9.0",
    "ipykernel>=6.27.0",
    "jupyter>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]
advanced = [
    "timm>=0.9.0",
    "wandb>=0.16.0",
]
